Config refactors for Spring 3.0 Milestone release (#189)
Co-authored-by: ashakirin <2254222+ashakirin@users.noreply.github.com>
Co-authored-by: Andrei Shakirin <andrei.shakirin@gmail.com>