@@ -23,7 +23,7 @@ import org.springframework.sbm.mule.api.toplevel.configuration.MuleConfiguration
 import org.springframework.stereotype.Component;
 
 import javax.xml.namespace.QName;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
@@ -42,24 +42,30 @@ public class SelectTranslator implements MuleComponentToSpringIntegrationDslTran
                                 String flowName,
                                 Map<Class, MuleComponentToSpringIntegrationDslTranslator> translatorsMap) {
 
-        String limitString = component.getMaxRows() == null ? "" : " LIMIT " + component.getMaxRows();
+        QueryFunctionParameter queryAndParameters = DBCommons.extractQueryAndParameters(component);
 
-        String query = component.getDynamicQuery() == null ? component.getParameterizedQuery()
-                : component.getDynamicQuery();
-        return new DslSnippet("// TODO: substitute expression language with appropriate java code \n" +
-                "                .handle((p, h) -> jdbcTemplate.queryForList(\"" +
-                escapeDoubleQuotes(query)
-                + limitString + "\"))",
-                Collections.emptySet(),
-                Set.of(
+        String translation = ".<LinkedMultiValueMap<String, String>>handle((p, h) ->\n" +
+                "                        jdbcTemplate.queryForList(\n" +
+                "                                \"" + DBCommons.escapeDoubleQuotes(queryAndParameters.getQuery()) + "\"" +
+                queryAndParameters.getArguments() + "))";
+        return DslSnippet.builder()
+                .renderedSnippet("// TODO: substitute expression language with appropriate java code \n" +
+                        "// TODO: The datatype might not be LinkedMultiValueMap please substitute the right type for payload\n" +
+                        translation
+                )
+                .requiredDependencies(Set.of(
                         "org.springframework.boot:spring-boot-starter-jdbc:2.5.5",
-                        "org.springframework.integration:spring-integration-jdbc:5.5.4"
-                ),
-                Set.of(new Bean("jdbcTemplate", "org.springframework.jdbc.core.JdbcTemplate"))
-        );
-    }
-
-    private String escapeDoubleQuotes(String str) {
-        return str.replace("\"", "\\\"");
+                        "org.springframework.integration:spring-integration-jdbc:5.5.4",
+                        "com.h2database:h2:2.1.214"
+                ))
+                .beans(
+                        Set.of(
+                                new Bean(
+                                        "jdbcTemplate",
+                                        "org.springframework.jdbc.core.JdbcTemplate"
+                                )
+                        )
+                )
+                .build();
     }
 }
